--- a/AppstreamLib/AppstreamLib.csproj
+++ b/AppstreamLib/AppstreamLib.csproj
@@ -69,7 +69,9 @@
     <Compile Include="Utilities\SMS.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
+    <None Include="app.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Nuget\Content\web.config.install.xdt">
       <SubType>Designer</SubType>
     </None>
